tests/rascal/negative/name_errors/L2/7_undecl-for4.ob
MODULE Bla;
VAR
  x, y, z: INTEGER;


BEGIN
  FOR x := y TO z BY step DO
    x := 1
  END
END Bla.